# claw-dashboard-skill

./: .gitignore  DASHBOARD-SETUP-GUIDE.md  IDENTITY.md  ONBOARDING-STATE-MACHINE.md  SKILL.md  SOUL.md  US-EQUITY-DASHBOARD-SCHEMA.md  USER.md  manifest.json  pyproject.toml
hub-app/: app.py
hub-app/routes/: __init__.py  us_equity.py
hub-app/services/: __init__.py  _smoke_alpaca.py  _smoke_e2e.py  _smoke_metrics.py  _smoke_template.py  alpaca_client.py  portfolio_metrics.py  us_equity_context.py
hub-app/templates/: base.html  index.html  module.html  us-equity-desk.html
src/: server.py
src/hub/: installer.py  manager.py
src/storage/: db.py
src/tools/: modules.py  setup.py  widgets.py
