[project]
name = "claw-dashboard-skill"
version = "0.1.0"
description = "Shared dashboard skill for OpenClaw agents — build, serve, and manage visual dashboards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
claw-dashboard = "src.server:main"
claw-dashboard-hub = "src.hub.app:main"
